add markup for Donate > Confirmation

--- a/sites/all/themes/JBW/css/donate.css
+++ b/sites/all/themes/JBW/css/donate.css
@@ -61,24 +61,29 @@
 .page-node  #region-content #block-system-main #webform-client-form-372 #webform-component-name #webform-component-name--first input,
 .page-node  #region-content #block-system-main #webform-client-form-372 #webform-component-name #webform-component-name--last input,
 .page-node  #region-content #block-system-main #webform-client-form-373 #webform-component-name #webform-component-name--first input,
-.page-node  #region-content #block-system-main #webform-client-form-373 #webform-component-name #webform-component-name--last input{
+.page-node  #region-content #block-system-main #webform-client-form-373 #webform-component-name #webform-component-name--last input,
+.page-node  #region-content #block-system-main #webform-client-form-374 #webform-component-name #webform-component-name--first input,
+.page-node  #region-content #block-system-main #webform-client-form-374 #webform-component-name #webform-component-name--last input{
     width: 165px;
 }
 
 .page-node  #region-content #block-system-main #webform-client-form-372 #webform-component-name,
-.page-node  #region-content #block-system-main #webform-client-form-373 #webform-component-name{
+.page-node  #region-content #block-system-main #webform-client-form-373 #webform-component-name,
+.page-node  #region-content #block-system-main #webform-client-form-374 #webform-component-name{
     display: inline;
     margin-bottom: 10px;
 }
 
 .page-node  #region-content #block-system-main #webform-client-form-372 #webform-component-name .fieldset-wrapper,
-.page-node  #region-content #block-system-main #webform-client-form-373 #webform-component-name .fieldset-wrapper{
+.page-node  #region-content #block-system-main #webform-client-form-373 #webform-component-name .fieldset-wrapper,
+.page-node  #region-content #block-system-main #webform-client-form-374 #webform-component-name .fieldset-wrapper{
     display: inline;
     
 }
 
 .page-node  #region-content #block-system-main #webform-client-form-372 /*#webform-component-name*/ legend,
-.page-node  #region-content #block-system-main #webform-client-form-373 /*#webform-component-name*/ legend{
+.page-node  #region-content #block-system-main #webform-client-form-373 /*#webform-component-name*/ legend,
+.page-node  #region-content #block-system-main #webform-client-form-374 /*#webform-component-name*/ legend{
     float: left;
     margin-right: 20px;
     margin-top: 25px;
@@ -88,7 +93,9 @@
 .page-node  #region-content #block-system-main #webform-client-form-372 #webform-component-name #webform-component-name--first,
 .page-node  #region-content #block-system-main #webform-client-form-372 #webform-component-name #webform-component-name--last,
 .page-node  #region-content #block-system-main #webform-client-form-373 #webform-component-name #webform-component-name--first,
-.page-node  #region-content #block-system-main #webform-client-form-373 #webform-component-name #webform-component-name--last{
+.page-node  #region-content #block-system-main #webform-client-form-373 #webform-component-name #webform-component-name--last,
+.page-node  #region-content #block-system-main #webform-client-form-374 #webform-component-name #webform-component-name--first,
+.page-node  #region-content #block-system-main #webform-client-form-374 #webform-component-name #webform-component-name--last{
     float: left;
     margin-right: 10px;
 }
@@ -98,37 +105,47 @@
 .page-node  #region-content #block-system-main #webform-client-form-372 #webform-component-address input,
 .page-node  #region-content #block-system-main #webform-client-form-373 #webform-component-address-all--address-1 input,
 .page-node  #region-content #block-system-main #webform-client-form-373 #webform-component-address-all--address-2 input,
-.page-node  #region-content #block-system-main #webform-client-form-373 #webform-component-address-all input{
+.page-node  #region-content #block-system-main #webform-client-form-373 #webform-component-address-all input,
+.page-node  #region-content #block-system-main #webform-client-form-374 #webform-component-address-all--address1 input,
+.page-node  #region-content #block-system-main #webform-client-form-374 #webform-component-address-all--address2 input,
+.page-node  #region-content #block-system-main #webform-client-form-374 #webform-component-address-all input{
     width: 340px;
 }
 
 .page-node  #region-content #block-system-main #webform-client-form-372 #webform-component-address .form-item,
-.page-node  #region-content #block-system-main #webform-client-form-373 #webform-component-address-all .form-item{
+.page-node  #region-content #block-system-main #webform-client-form-373 #webform-component-address-all .form-item,
+.page-node  #region-content #block-system-main #webform-client-form-374 #webform-component-address-all .form-item{
     margin-left: 100px;
 }
 
 .page-node  #region-content #block-system-main #webform-client-form-372 #webform-component-address #webform-component-address--postal-zipcode input,
 .page-node  #region-content #block-system-main #webform-client-form-372 #webform-component-address #webform-component-address--country select,
 .page-node  #region-content #block-system-main #webform-client-form-373 #webform-component-address-all #webform-component-address-all--postal-zipcode input,
-.page-node  #region-content #block-system-main #webform-client-form-373 #webform-component-address-all #webform-component-address-all--country select{
+.page-node  #region-content #block-system-main #webform-client-form-373 #webform-component-address-all #webform-component-address-all--country select,
+.page-node  #region-content #block-system-main #webform-client-form-374 #webform-component-address-all #webform-component-address-all--zip input,
+.page-node  #region-content #block-system-main #webform-client-form-374 #webform-component-address-all #webform-component-address-all--country select{
     width: 165px;
 }
 
 .page-node  #region-content #block-system-main #webform-client-form-372 #webform-component-address #webform-component-address--country select option,
-.page-node  #region-content #block-system-main #webform-client-form-373 #webform-component-address-all #webform-component-address-all--country select option{
+.page-node  #region-content #block-system-main #webform-client-form-373 #webform-component-address-all #webform-component-address-all--country select option,
+.page-node  #region-content #block-system-main #webform-client-form-374 #webform-component-address-all #webform-component-address-all--country select option{
     width: 165px;
 }
 
 .page-node  #region-content #block-system-main #webform-client-form-372 #webform-component-address #webform-component-address--postal-zipcode,
 .page-node  #region-content #block-system-main #webform-client-form-372 #webform-component-address #webform-component-address--country,
 .page-node  #region-content #block-system-main #webform-client-form-373 #webform-component-address-all #webform-component-address-all--postal-zipcode,
-.page-node  #region-content #block-system-main #webform-client-form-373 #webform-component-address-all #webform-component-address-all--country{
+.page-node  #region-content #block-system-main #webform-client-form-373 #webform-component-address-all #webform-component-address-all--country,
+.page-node  #region-content #block-system-main #webform-client-form-374 #webform-component-address-all #webform-component-address-all--zip,
+.page-node  #region-content #block-system-main #webform-client-form-374 #webform-component-address-all #webform-component-address-all--country{
     float: left;
     margin-right: 10px;
 }
 
 .page-node  #region-content #block-system-main #webform-client-form-372 #webform-component-address #webform-component-address--country,
-.page-node  #region-content #block-system-main #webform-client-form-373 #webform-component-address-all #webform-component-address-all--country{
+.page-node  #region-content #block-system-main #webform-client-form-373 #webform-component-address-all #webform-component-address-all--country,
+.page-node  #region-content #block-system-main #webform-client-form-374 #webform-component-address-all #webform-component-address-all--country{
     margin-left: 0px;
 }
 
@@ -137,7 +154,9 @@
 .page-node  #region-content #block-system-main #webform-client-form-372 #webform-component-tel-work label,
 .page-node  #region-content #block-system-main #webform-client-form-372 #webform-component-mobile label,
 .page-node  #region-content #block-system-main #webform-client-form-372 #webform-component-email label,
-.page-node  #region-content #block-system-main #webform-client-form-373 #webform-component-phone-number label{
+.page-node  #region-content #block-system-main #webform-client-form-373 #webform-component-phone-number label,
+.page-node  #region-content #block-system-main #webform-client-form-374 #webform-component-night-phone-a label,
+.page-node  #region-content #block-system-main #webform-client-form-374 #webform-component-amount label{
     float: left;
     margin-right: 20px;
     width: 80px;
@@ -150,7 +169,9 @@
     width: 410px;
 }
 
-.page-node  #region-content #block-system-main #webform-client-form-373 #webform-component-phone-number input{
+.page-node  #region-content #block-system-main #webform-client-form-373 #webform-component-phone-number input,
+.page-node  #region-content #block-system-main #webform-client-form-374 #webform-component-night-phone-a input,
+.page-node  #region-content #block-system-main #webform-client-form-374 #webform-component-amount input{
     width: 340px;
 }
 
@@ -163,6 +184,11 @@
 }
 
 .page-node  #region-content #block-system-main #webform-client-form-372 #edit-actions,
-.page-node  #region-content #block-system-main #webform-client-form-373 #edit-actions{
+.page-node  #region-content #block-system-main #webform-client-form-373 #edit-actions,
+.page-node  #region-content #block-system-main #webform-client-form-374 #edit-actions{
     float: right;
+}
+
+.page-node  #region-content #block-system-main #webform-client-form-374 #edit-actions{
+    display: none;
 }
