--- a/sites/all/themes/JBW/css/fonts.css
+++ b/sites/all/themes/JBW/css/fonts.css
@@ -193,7 +193,9 @@
 .page-node  #region-content #block-system-main #webform-client-form-372 label,
 .page-node  #region-content #block-system-main #webform-client-form-372 legend,
 .page-node  #region-content #block-system-main #webform-client-form-373 label,
-.page-node  #region-content #block-system-main #webform-client-form-373 legend{
+.page-node  #region-content #block-system-main #webform-client-form-373 legend,
+.page-node  #region-content #block-system-main #webform-client-form-374 label,
+.page-node  #region-content #block-system-main #webform-client-form-374 legend{
     font-family: georgia;
     font-style: normal;
     font-size: 10px;
