fix empty shopping cart

--- a/sites/all/themes/JBW/css/commerce.css
+++ b/sites/all/themes/JBW/css/commerce.css
@@ -15,9 +15,12 @@
     padding: 10px;
 }
 
-.page-cart #region-content .view-content{
+.page-cart #region-content .view-content,
+.page-cart #region-content .cart-empty-page{
     margin-top: 45px;
 }
+
+
 
 /*---------------------------remove focus-------------------------------------*/
 .page-checkout input:focus,
