--- a/sites/all/themes/JBW/css/donate.css
+++ b/sites/all/themes/JBW/css/donate.css
@@ -185,7 +185,8 @@
 
 .page-node  #region-content #block-system-main #webform-client-form-372 #edit-actions,
 .page-node  #region-content #block-system-main #webform-client-form-373 #edit-actions,
-.page-node  #region-content #block-system-main #webform-client-form-374 #edit-actions-donate{
+.page-node  #region-content #block-system-main #webform-client-form-374 #edit-actions-donate,
+.page-node  #region-content #block-system-main #webform-client-form-390 #edit-actions{
     float: right;
 }
 
