--- a/sites/all/themes/JBW/css/sidebar.css
+++ b/sites/all/themes/JBW/css/sidebar.css
@@ -101,9 +101,15 @@
     margin: 0;  
 }
 
+#region-sidebar #scrollbarY .block-block-3{
+    width: 370px;
+    height: 442px;
+    /*margin-bottom: 20px;*/
+}
 /*------------------------------twitter-----------------------------------------*/
 #region-sidebar #scrollbarY .block-block-4{
     width: 370px;
+    height: 286px;
     /*margin-bottom: 20px;*/
 }
 
@@ -169,6 +175,6 @@
 #scrollbarY .overview { list-style: none; position: absolute; left: 0; top: 0; padding: 0; margin: 0; }
 #scrollbarY .scrollbar{ background: transparent url(sb/bg-scrollbar-track-y.png) no-repeat 0 0; position: relative; background-position: 0 0; float: right; width: 15px; }
 #scrollbarY .track { background: transparent url(sb/bg-scrollbar-trackend-y.png) no-repeat 0 100%; height: 100%; width:13px; position: relative; padding: 0 1px; }
-#scrollbarY .thumb { background: transparent url(sb/bg-scrollbar-thumb-y.png) no-repeat 50% 100%; height: 20px; width: 25px; cursor: pointer; overflow: hidden; position: absolute; top: 0; left: -7px;}
+#scrollbarY .thumb { background: transparent url(sb/bg-scrollbar-thumb-y.png) repeat-y 50% 100%; height: 20px; width: 25px; cursor: pointer; overflow: hidden; position: absolute; top: 0; left: -7px;}
 #scrollbarY .thumb .end { background: transparent url(sb/bg-scrollbar-thumb-y.png) no-repeat 50% 0; overflow: hidden; height: 5px; width: 25px; }
 #scrollbarY .disable { display: none; }
