--- a/sites/all/themes/JBW/css/fonts.css
+++ b/sites/all/themes/JBW/css/fonts.css
@@ -53,7 +53,6 @@
 .page-node .views-field-field-festival-date,
 .page-node .node-event-date,
 .page-node .node-event-price,
-.page-node .buy-link-cart,
 .page-node .Saver-price,
 .page-news .views-field-field-author,
 .page-news .views-field-field-publication-date{
@@ -62,7 +61,15 @@
     margin-bottom: 3px;
     font-family: georgia;
     font-style: italic;
+    font-size: 12px;
+    color: #58595b;
+}
+.page-node .buy-link-cart{
+    margin-bottom: 3px;
+    font-family: georgia;
+    font-style: italic;
     font-size: 10px;
+    color: #58595b;
 }
 
 .page-node .Saver-price{
@@ -74,6 +81,9 @@
     font-style: italic;
     color: #77c24e;
     font-size: 12px;
+}
+.page-node .buy-link-cart em{
+    color: #77c24e;
 }
 
 
@@ -106,24 +116,23 @@
 }
 
 /*-----------------------------WNTT------------------------------------------*/
-.page-node h2.pane-title{
+.page-node #region-content h2.pane-title{
     font-size: 14px;
     font-weight: normal;
     line-height: 1.1em;
     padding-top: 10px;
 }
 
-.page-node .views-field-body{
+.page-node #region-content .views-field-body{
     font-size: 12px;
     font-family: georgia;
     margin-top: 10px;
 }
 
-.page-node .views-field-title{
-    font-size: 14px;
+.page-node #region-content .views-field-title{
+    font-size: 15px;
     margin-bottom: 3px;
 }
-
 
 /*-------------------------------Check out------------------------------------*/
 .page-checkout #edit-customer-profile-billing{
