--- a/sites/all/themes/JBW/css/events.css
+++ b/sites/all/themes/JBW/css/events.css
@@ -6,6 +6,7 @@
 .node-type-event #region-content .view-content{
     margin-top: 0 !important;
 }
+.node-event-price,
 .node-event-date{
     margin-left: 5px;
 }
@@ -110,8 +111,6 @@
     background: #231f20;
     width: 135px;
     height: 50px;
-    position: absolute; 
-    top: 100px;
     text-align: left;
     font: normal 'trebuchet MS', tahoma, arial, helvetica;
     overflow: hidden;
