--- a/sites/all/themes/JBW/css/fonts.css
+++ b/sites/all/themes/JBW/css/fonts.css
@@ -25,6 +25,9 @@
     text-decoration: none;
     color: #58595b;
 }
+.region-sidebar a,
+.region-sidebar a:link,
+.region-sidebar a:visited,
 .region-content a,
 .region-content a:link,
 .region-content a:visited{
@@ -59,6 +62,8 @@
 }
 
 /*-------------------font events date,price, etc------------------------------*/
+.page-node .views-field-field-speakers,
+.page-node .views-field-field-location,
 .page-node .views-field-field-festival-date,
 .page-node .node-event-date,
 .page-node .node-event-price,
@@ -72,6 +77,10 @@
     font-style: italic;
     font-size: 12px;
     color: #58595b;
+}
+.page-node .views-field-field-speakers,
+.page-node .views-field-field-location{
+    margin-left: 5px;
 }
 .page-node .buy-link-cart{
     margin-bottom: 3px;
@@ -276,11 +285,15 @@
 }
 
 /*Sing up in side bar*/
+#region-sidebar .view-id-donation .views-field-title,
 #region-sidebar #block-views-litkicks-block-1 .views-field-title{
     font-family: georgia;
     font-style: italic;
     font-size: 15px;
     font-weight: normal;
+}
+#region-sidebar .view-id-donation .views-field-title{
+    padding: 5px 10px;
 }
 
 /*-------------------------------Subscribe------------------------------------*/
