--- a/sites/all/themes/JBW/css/sidebar.css
+++ b/sites/all/themes/JBW/css/sidebar.css
@@ -201,3 +201,10 @@
 #scrollbarY .thumb { background: transparent url(sb/bg-scrollbar-thumb-y.png) repeat-y 50% 100%; height: 20px; width: 25px; cursor: pointer; overflow: hidden; position: absolute; top: 0; left: -7px;}
 #scrollbarY .thumb .end { background: transparent url(sb/bg-scrollbar-thumb-y.png) no-repeat 50% 0; overflow: hidden; height: 5px; width: 25px; }
 #scrollbarY .disable { display: none; }
+
+#region-sidebar .media-vimeo-video iframe{
+    width: 215px !important;
+    height: 145px !important;
+    float: left;
+    margin-right: 10px;
+}
